# rule_extractor

./: .gitignore  main.py  pyproject.toml
versionk/: data_manager.py  functions.py  rule_extractor.py  utils.py
