[project]
name = "rule-extractor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cupy-cuda12x>=13.4.1",
    "ipykernel>=6.29.5",
    "joblib>=1.4.2",
    "numexpr>=2.10.2",
    "numpy>=2.2.4",
    "pandas>=2.2.3",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.2",
    "ta-lib>=0.6.3",
    "tables>=3.10.2",
    "tqdm>=4.67.1",
]
